[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
right_disconnects = true
scroll_offset = Vector2( -40, -30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 14.8391
margin_top = 6.54666
margin_right = 204.839
margin_bottom = 46.5467
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HBoxContainer"]
margin_right = 85.0
margin_bottom = 40.0
text = "Add node +"

[node name="RunProgram" type="Button" parent="HBoxContainer"]
margin_left = 89.0
margin_right = 190.0
margin_bottom = 40.0
text = "Do the magic!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="connection_request" from="GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/RunProgram" to="." method="_on_RunProgram_pressed"]
